@@ -1,16 +1,17 @@
-# $NetBSD: Makefile,v 1.9 2004/01/23 17:18:32 jmmv Exp $
+# $NetBSD: Makefile,v 1.10 2004/04/26 10:34:09 recht Exp $
 #
 
-DISTNAME=	html-4.0b
-PKGREVISION=	3
+DISTNAME=	html-4.01
 CATEGORIES=	textproc
-MASTER_SITES=	http://fallout.campusview.indiana.edu/ports/distfiles/
+MASTER_SITES=	ftp://ftp.FreeBSD.org/pub/FreeBSD/ports/distfiles/
 
 MAINTAINER=	hubertf@NetBSD.org
 HOMEPAGE=	http://www.w3.org/TR/REC-html40/
 COMMENT=	SGML DTDs for the Hypertext Markup Language
 
 DEPENDS+=	iso8879>=1986:../../textproc/iso8879
+
+PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 WRKSRC=		${WRKDIR}
 NO_MTREE=	yes
