@@ -1,4 +1,4 @@
-$NetBSD$
+$NetBSD: distinfo,v 1.2 2001/04/20 15:04:57 skrll Exp $
 
-SHA1 (html-4.0b.tar.gz) = 4985d99bfd79aaf530bef77e16969d436823cff6
-Size (html-4.0b.tar.gz) = 40520 bytes
+SHA1 (html-4.01.tar.gz) = 621c8b602f4190bc33007d32b91b8db977ab3641
+Size (html-4.01.tar.gz) = 63874 bytes
