@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.8433 2004/12/25 12:06:55 jmmv Exp $
+$NetBSD: CHANGES,v 1.8434 2004/12/25 14:04:05 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -6532,3 +6532,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added p5-Spoon-0.21 [jlam 2004-12-25]
 	Updated intltool to 0.32.1 [jmmv 2004-12-25]
 	Updated p5-Tk to 804.027nb2 [wiz 2004-12-25]
+	Updated html to 4.01 [uebayasi 2004-12-25]
